Fixing accidental line-wraps in header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,132 +7,135 @@ margin: 0;
 padding: 0;
 }
 .background{
-min-width:100%;
-background-color:#DDD;
-min-height:100%;
+min-width: 100%;
+background-color: #DDD;
+min-height: 100%;
 }
 .canvas{
-height:100%
+height: 100%
 }
 .header{
-background-color:#08C;
-height:125px;
+background-color: #08C;
+height: 125px;
 
 }
 .header-border{
-height:5px;
-background-color:#020233;
+height: 5px;
+background-color: #020233;
 }
 .header-menu-tab{
-background-color:#020233;
+background-color: #020233;
 text-align: center;
-position:absolute;
-padding:0 10px 0 10px;
+position: absolute;
+padding: 0 10px 0 10px;
 height: 25px;
-border-bottom-left-radius:15px;
-border-bottom-right-radius:15px;
+border-bottom-left-radius: 15px;
+border-bottom-right-radius: 15px;
 }
 .header-menu-tab a{
-font-size:12px;
-margin:8px;
+font-size: 12px;
+margin: 8px;
+white-space: nowrap;
 }
 .header-menu-tab a, .header-menu-tab a:link, .header-menu-tab a:active, .header-menu-tab a:visited{
-text-decoration:none;
-color:#EEE;
+text-decoration: none;
+color: #EEE;
 }
 .header-menu-tab a:hover,.header-menu-tab a:focus{
-text-decoration:none;
-color:#19C;
+text-decoration: none;
+color: #19C;
 }
 .linkbutton:hover, .linkbutton:focus{
-background-color:#020233;
-color:#19C;
+background-color: #020233;
+color: #19C;
 }
 .linkbutton{
-background-color:#020233;
-font-size:12px;
+background-color: #020233;
+font-size: 12px;
 border: none;
-color:#EEE;
+color: #EEE;
 }
 .header-menu-tab ul{
-padding:0;
-margin:0;
+padding: 0;
+margin: 0;
+white-space: nowrap;
 }
 .header-menu-tab li{
-display:inline;
+display: inline;
 padding: 0 10px 0 10px;
 }
 #logoutform{
-display:inline;
+display: inline;
 }
 .header-left{
 text-align: left;
 }
 .logo img{
-margin:38px 0px 0px 20px;
+margin: 38px 0px 0px 20px;
 }
 a.logo:hover, a.logo:focus, a.logo:visited, a.logo:active{
-text-decoration:none;
+text-decoration: none;
 }
 .name{
-padding-left:40px;
-position:relative;
-top:41px;
-font-size:27px;
-color:#333;
-font-family:"Times New Roman",Times,serif;
+padding-left: 40px;
+position: relative;
+top: 41px;
+font-size: 27px;
+color: #333;
+font-family: "Times New Roman", Times, serif;
 }
 .name .initial
 {
-font-size:35px;
-color:#1217BB;
+font-size: 35px;
+color: #1217BB;
 }
 .header-right{
-text-align:center;
+text-align: center;
+white-space: nowrap;
 }
 .tagline{
-margin-top:32px;
-padding-right:100px;
-font-size:16px;
-color:#DDD;
-font-family: "Times New Roman",Times,serif;
-font-style:italic;
+margin-top: 32px;
+padding-right: 100px;
+font-size: 16px;
+color: #DDD;
+font-family: "Times New Roman", Times, serif;
+font-style: italic;
 }
 .menu-bar{
 text-align: left;
-background-color:#020233;
-position:relative;
-z-index:2;
-padding:16px 0 16px 0;
+background-color: #020233;
+position: relative;
+z-index: 2;
+padding: 16px 0 16px 0;
 }
 ul.menu{
-margin:0;
+margin: 0;
 }
 .menu li{
-display:inline;
+display: inline;
 padding: 16px 55px 16px 55px;
-font-size:15px;
+font-size: 15px;
 }
 .menu a{
-cursor:pointer;
+cursor: pointer;
 }
 .menu a, .menu a:link, menu a:visited menu a:active{
-text-decoration:none;
-color:#DDD;
+text-decoration: none;
+color: #DDD;
 }
 .menu a:hover, .menu a:focus{
-text-decoration:none;
-color:#19C;
+text-decoration: none;
+color: #19C;
 }
 .page{
-min-height:100px !important;
-background-color:#FFF;
-padding:30px 0 30px 0;
+min-height: 100px !important;
+background-color: #FFF;
+padding: 30px 0 30px 0;
 }
 .footer {
 margin: 0;
 text-align: center;
-font-size:12px;
+font-size: 12px;
 margin-bottom: 20px;
 }
 .footer ul{
@@ -140,21 +143,21 @@ padding: 0;
 margin: 0;
 }
 .footer li{
-line-height:14px;
-display:inline;
+line-height: 14px;
+display: inline;
 padding: 0 10px 0 10px;
 margin: 0;
 }
 .footer a{
-cursor:pointer;
+cursor: pointer;
 }
 .footer a, .footer a:link, .footer a:active, .footer a:visited{
-text-decoration:none;
-color:#06A;
+text-decoration: none;
+color: #06A;
 }
 .footer a:hover, .footer a:focus{
-text-decoration:none;
-color:#555;
+text-decoration: none;
+color: #555;
 }
 .shadow{
 -moz-box-shadow: 1px 2px 4px #888;
@@ -167,46 +170,46 @@ box-shadow: 1px 2px 4px #888;
 box-shadow: 1px 1px 3px #000;
 }
 .home-content{
-background-color:#020233;
-border-radius:15px;
-color:#DDD;
-font-family:"Times New Roman",Times,serif;
-font-size:16px;
+background-color: #020233;
+border-radius: 15px;
+color: #DDD;
+font-family: "Times New Roman", Times, serif;
+font-size: 16px;
 }
 .home-left img{
-margin:40px 20px 20px 40px;
-border-radius:5px;
+margin: 40px 20px 20px 40px;
+border-radius: 5px;
 }
 .home-right{
-margin-top:20px;
-margin-bottom:40px;
+margin-top: 20px;
+margin-bottom: 40px;
 }
 .btn-warning{
-color:#000 !important;
+color: #000 !important;
 }
 .home-content h3{
-line-height:1.4 !important;
-margin-bottom:20px !important;
+line-height: 1.4 !important;
+margin-bottom: 20px !important;
 }
 input.learn-more, input.try-it{
-margin-top:30px;
+margin-top: 30px;
 }
 form.learn-more, form.try-it{
-margin-right:10px;
-display:inline;
+margin-right: 10px;
+display: inline;
 }
 .center{
-text-align:center;
-margin:0 auto;
+text-align: center;
+margin: 0 auto;
 }
 .table-header{
-font-style:italic;
+font-style: italic;
 }
 .messages{
-background-color:#DDD;
-margin-bottom:16px;
-padding-top:8px;
+background-color: #DDD;
+margin-bottom: 16px;
+padding-top: 8px;
 }
 .errorlist{
-color:#F00;
+color: #F00;
 }
